[gd_scene load_steps=27 format=4 uid="uid://bf6l6gw486uwb"]

[ext_resource type="TileSet" uid="uid://cv5hbh50gwf0m" path="res://assets/LevelTiles.tres" id="1_m33p3"]
[ext_resource type="Script" uid="uid://bma3ovha2ywtq" path="res://scenes/interactables.gd" id="2_dss4m"]
[ext_resource type="PackedScene" uid="uid://clcphumb7x1fi" path="res://actors/monster_container.tscn" id="3_k0juu"]
[ext_resource type="PackedScene" uid="uid://jrijq5330mc3" path="res://actors/monster.tscn" id="4_71j4m"]
[ext_resource type="PackedScene" uid="uid://b7ffejioelqqr" path="res://actors/player.tscn" id="5_71j4m"]
[ext_resource type="PackedScene" uid="uid://b7otmjo2e4xrn" path="res://scenes/interactables/barrel-new.tscn" id="5_dss4m"]
[ext_resource type="PackedScene" uid="uid://c01s78h32o2yq" path="res://scenes/interactables/door_new.tscn" id="5_jhx03"]
[ext_resource type="PackedScene" uid="uid://fty5ct3prfsh" path="res://cards/card_gui.tscn" id="5_qfnet"]
[ext_resource type="AudioStream" uid="uid://b2e1b1lgnyh7f" path="res://assets/audio/ambiance/cave_ambiance.wav" id="8_7r4gi"]
[ext_resource type="Script" uid="uid://cab8cyrahr2b5" path="res://scenes/background_music.gd" id="9_w7kh3"]
[ext_resource type="Script" uid="uid://jjhmygbyoyxh" path="res://scenes/tutorial_panel.gd" id="10_q5onr"]
[ext_resource type="FontFile" uid="uid://yej5vxj50iqs" path="res://assets/font/m5x7.ttf" id="11_jhx03"]
[ext_resource type="Texture2D" uid="uid://c2lh06iu0xsxg" path="res://assets/ui/close_icon-export.png" id="12_o8fc1"]
[ext_resource type="Texture2D" uid="uid://n0afdi5g4623" path="res://assets/cards/card_texture/card_texture8.png" id="13_xo05s"]
[ext_resource type="PackedScene" uid="uid://bvvjl7supfis8" path="res://scenes/interactables/chest-new.tscn" id="15_dss4m"]
[ext_resource type="Script" uid="uid://b5qe5ftfbq8er" path="res://cards/abstract_card/card_resources/card_detail_base.gd" id="16_dss4m"]

[sub_resource type="Gradient" id="Gradient_xo05s"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.0470588, 0.0745098, 0.0901961, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_dss4m"]
gradient = SubResource("Gradient_xo05s")

[sub_resource type="Resource" id="Resource_7t5mc"]
script = ExtResource("16_dss4m")
card_type = 12
power = 1
metadata/_custom_type_script = "uid://b5qe5ftfbq8er"

[sub_resource type="Resource" id="Resource_lakw3"]
script = ExtResource("16_dss4m")
card_type = 12
power = 1
metadata/_custom_type_script = "uid://b5qe5ftfbq8er"

[sub_resource type="Resource" id="Resource_2lf6f"]
script = ExtResource("16_dss4m")
card_type = 9
power = 1
metadata/_custom_type_script = "uid://b5qe5ftfbq8er"

[sub_resource type="Resource" id="Resource_dss4m"]
script = ExtResource("16_dss4m")
card_type = 12
power = 1
metadata/_custom_type_script = "uid://b5qe5ftfbq8er"

[sub_resource type="Resource" id="Resource_xo05s"]
script = ExtResource("16_dss4m")
card_type = 9
power = 4
metadata/_custom_type_script = "uid://b5qe5ftfbq8er"

[sub_resource type="Resource" id="Resource_pm21f"]
script = ExtResource("16_dss4m")
card_type = 12
power = 1
metadata/_custom_type_script = "uid://b5qe5ftfbq8er"

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xo05s"]
bg_color = Color(0.27623, 0.148609, 0, 0.890196)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7t5mc"]
texture = ExtResource("13_xo05s")

[node name="World" type="Node2D"]

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-24, -40)
scale = Vector2(1.9375, 272)
texture = SubResource("GradientTexture1D_dss4m")

[node name="Level" type="Node2D" parent="."]
position = Vector2(0, -1)
scale = Vector2(0.5, 0.5)

[node name="SpawnPoint" type="Marker2D" parent="Level"]
position = Vector2(-240, -78)

[node name="Ground" type="TileMapLayer" parent="Level"]
position = Vector2(0, 2)
tile_map_data = PackedByteArray("AAD3//3/AwAAAAYAAAD3//7/AwABAAYAAAD3////AwAAAAYAAAD4////AwAAAAYAAAD5////AwADAAkAAAD6//7/AwADABcAAAD6////AwAAAAYAAAD7////AwADAAoAAAD6/wEAAwACAAcAAAD4//v/AwAAAAYAAAD5//r/AwAAAAYAAAD5//v/AwACAAkAAAD6//r/AwAAAAYAAAD6//v/AwAAAAYAAAD7//r/AwAAAAYAAAD7//v/AwAAAAYAAAD8//r/AwADAAkAAAD9//r/AwAAAAYAAAD+//r/AwAAAA0AAAD+//v/AwAAAAYAAAD1//r/AwAAAAYAAAD2//v/AwABAAgAAAD3//r/AwAAAAYAAAD3//v/AwAAAAYAAAD0//r/AwAAAA0AAAD0//v/AwAAAAYAAAD0//z/AwAAAAYAAAD0//3/AwACAAYAAAD0//7/AwAAAAYAAAD0////AwAAAAYAAAD0/wAAAwAAAA0AAAD0/wEAAwAAAA0AAAD1//z/AwADAAkAAAD1//3/AwAAAAYAAAD1//7/AwACAAcAAAD1////AwABAAYAAAD1/wAAAwADABcAAAD1/wEAAwAAAAYAAAD2//z/AwAAAAYAAAD3//z/AwAAAAYAAAD9//z/AwAAAAYAAAD+//z/AwAAAAYAAAD+//3/AwAAAAYAAAD9//3/AwAAAAYAAAD8//3/AwACAAkAAAD8//7/AwAAAAYAAAD8/wAAAwABABUAAAD9/wAAAwADABcAAAD9////AwAAAAYAAAD9//7/AwAAAAYAAAD2/wAAAwABAAkAAAD2////AwAAAAYAAAD2//7/AwAAAAYAAAD2//3/AwAAAAYAAAD7//z/AwABAAgAAAD7//3/AwAAAAYAAAD7//7/AwABAAgAAAD2/wEAAwAAAAYAAAD3/wEAAwABAAYAAAD4/wEAAwAAAAYAAAD5/wEAAwAAAAYAAAD7/wEAAwAAAAYAAAD8/wEAAwAAAAYAAAD9/wEAAwAAAAYAAAD9//v/AwAAAAYAAAD5//3/AwAAAAYAAAD4//3/AwAAAAYAAAD6//3/AwAAAAYAAAD4//z/AwAAAAYAAAD5//z/AwAAAAYAAAD6//z/AwAAAAYAAAD4//7/AwADABcAAAD5//7/AwADAAgAAAADAP3/AwACAAcAAAAGAP3/AwAAAAYAAAAEAPv/AwAAAAYAAAAEAPz/AwABAAcAAAAEAP//AwAAAAYAAAAEAAAAAwAHABAAAAAFAPv/AwABABMAAAAFAPz/AwAAABYAAAAFAP//AwAAAAYAAAAFAAAAAwAAAAYAAAAGAPv/AwAAABQAAAAGAPz/AwAOABAAAAAGAP7/AwAAAAYAAAAGAAAAAwAAAAYAAAAHAPv/AwAAAAYAAAAHAPz/AwABABQAAAAHAP7/AwAAAAYAAAAHAP//AwAAAAYAAAAHAAAAAwAAAAYAAAD8////AwAAAAYAAAAAAP3/AwABAAgAAAAHAP3/AwABABYAAAD1//v/AwAAABYAAADv/wQAAwACAAgAAADw/wUAAwACAAgAAADx/wQAAwADAAgAAADz/wIAAwABAAgAAADz/wMAAwADAAgAAAD0/wIAAwACAAgAAAD2/wMAAwACAAgAAAD2/wQAAwABAAgAAAD3/wIAAwACAAgAAAD3/wMAAwADAAgAAAD6/wMAAwABAAgAAAD6/wQAAwABAAgAAAD7/wQAAwABAAgAAAD8/wMAAwABAAgAAAD9/wIAAwACAAgAAAACAAUAAwACAAgAAAADAAIAAwABAAgAAAAEAAIAAwABAAgAAAAEAAMAAwABAAgAAAAEAAQAAwADAAgAAAAFAAUAAwABAAgAAAAGAAQAAwACAAgAAAAJAAIAAwABAAgAAAAJAAQAAwADAAgAAAANAAUAAwABAAgAAAD//wAAAwABAAgAAAAAAAAAAwACAAgAAAACAAEAAwABAAgAAAAJAP//AwADAAgAAAAJAAAAAwABAAgAAAAKAPz/AwABAAgAAAAKAP//AwABAAgAAAALAPv/AwABAAgAAAAMAPr/AwADAAgAAAAMAPz/AwADAAgAAAAMAP//AwABAAgAAAANAPX/AwABAAgAAAANAPn/AwADAAgAAAANAPv/AwACAAgAAAANAP//AwACAAgAAAD///X/AwADAAgAAAD///f/AwADAAgAAAAAAPb/AwACAAgAAAAAAPf/AwACAAgAAAACAPX/AwACAAgAAAACAPn/AwADAAgAAAADAPf/AwADAAgAAAAEAPX/AwACAAgAAAAEAPf/AwADAAgAAAAGAPj/AwADAAgAAAAHAPj/AwACAAgAAADx//j/AwADAAgAAADy//j/AwABAAgAAADz//j/AwABAAgAAAD4//j/AwACAAgAAAD5//X/AwABAAgAAAD6//f/AwACAAgAAAD7//b/AwABAAgAAAD8//j/AwABAAgAAADv//7/AwACAAgAAADv/wAAAwADAAgAAADx//r/AwADAAgAAADz//r/AwABAAgAAADz//7/AwACAAgAAADz/wAAAwABAAgAAADz/wEAAwABAAgAAAD///v/AwACAAgAAAAIAPX/AwACAAgAAAAJAPX/AwACAAgAAAAKAPX/AwABAAgAAAAKAPb/AwACAAgAAAAJAPj/AwACAAgAAAAJAPn/AwABAAgAAAA=")
tile_set = ExtResource("1_m33p3")

[node name="Colliders" type="TileMapLayer" parent="Level"]
position = Vector2(0, 2)
tile_map_data = PackedByteArray("AAAAAPz/AwABAAAAAAABAPz/AwABAAAAAAACAPz/AwABAAAAAAD///z/AwABAAAAAAD///7/AwABAAAAAAACAP7/AwABAAAAAAD0//r/AwAAAAAAAAD+//7/AwAAAAAAAAD+////AwAAAAAAAAD+//r/AwAAAAAAAAD+//z/AwABAAAAAAD+//v/AwAAAAAAAAD0/wAAAwAAAAAAAAD0//v/AwAAAAAAAAD0//z/AwAAAAAAAAD0//3/AwAAAAAAAAD0//7/AwAAAAAAAAD0////AwAAAAAAAAD1//7/AwABAAAAAAD3//7/AwABAAAAAAD8//7/AwABAAAAAAD9//7/AwABAAAAAAAAAP7/AwABAAAAAAABAP7/AwABAAAAAAADAPr/AwAAAAAAAAADAPv/AwAAAAAAAAADAPz/AwABAAAAAAADAP7/AwAAAAAAAAADAP//AwAAAAAAAAADAAAAAwAAAAAAAAADAAEAAwABAAAAAAD1//n/AwABAAAAAAD2//n/AwABAAAAAAD3//n/AwABAAAAAAD4//n/AwABAAAAAAD5//n/AwABAAAAAAD6//n/AwABAAAAAAD7//n/AwABAAAAAAD8//n/AwABAAAAAAD9//n/AwABAAAAAAD0//n/AwAAAAAAAAD+//n/AwAAAAAAAAD5//z/AwABAAAAAAD4//z/AwAAAAAAAAD4//3/AwABAAAAAAD3//3/AwAAAAAAAAAEAPr/AwABAAAAAAAFAPr/AwABAAAAAAAGAPr/AwABAAAAAAAHAPv/AwABAAAAAAAIAPz/AwAAAAAAAAAIAP3/AwAAAAAAAAAIAP7/AwAAAAAAAAAIAP//AwAAAAAAAAAIAAAAAwAAAAAAAAAHAAEAAwABAAAAAAAGAAEAAwABAAAAAAAFAAEAAwABAAAAAAAEAAEAAwABAAAAAAAIAAEAAwABAAAAAAAHAPr/AwAAAAAAAAAIAPv/AwAAAAAAAAAEAPv/AwABABIAAAD0/wEAAwABAAAAAAD1/wEAAwABAAAAAAD2/wEAAwABAAAAAAD3/wEAAwABAAAAAAD4/wEAAwABAAAAAAD6/wEAAwABAAAAAAD7/wEAAwABAAAAAAD8/wEAAwABAAAAAAD9/wEAAwABAAAAAAD+/wEAAwABAAAAAAD9////AwAFABcAAAD+/wAAAwAAAAAAAAD1//r/AwAAABcAAAD2//r/AwAGABEAAAD7//7/AwABAAAAAAD7//3/AwAAAAAAAAD6//3/AwABAAAAAAD6//z/AwAAAAAAAAAEAP//AwABAAAAAAAFAP//AwABAAAAAAAGAP//AwABAAAAAAD5/wEAAwABAAAAAAA=")
tile_set = ExtResource("1_m33p3")

[node name="Interactables" type="Node2D" parent="."]
script = ExtResource("2_dss4m")

[node name="Door2" parent="Interactables" instance=ExtResource("5_jhx03")]
position = Vector2(-24, -40)
interactable_name = 12
oneshot_interaction = true

[node name="Door" parent="Interactables" instance=ExtResource("5_jhx03")]
position = Vector2(-152, -24)
interactable_name = 12
oneshot_interaction = true

[node name="Barrel2" parent="Interactables" instance=ExtResource("5_dss4m")]
position = Vector2(-40, -88)
interactable_name = 9
oneshot_interaction = true
interactable_card_reward = SubResource("Resource_7t5mc")

[node name="Barrel" parent="Interactables" instance=ExtResource("5_dss4m")]
position = Vector2(-168, -8)
interactable_name = 9
oneshot_interaction = true
interactable_card_reward = SubResource("Resource_lakw3")

[node name="Barrel3" parent="Interactables" instance=ExtResource("5_dss4m")]
position = Vector2(-136, -88)
interactable_name = 9
oneshot_interaction = true
interactable_card_reward = SubResource("Resource_2lf6f")

[node name="Barrel4" parent="Interactables" instance=ExtResource("5_dss4m")]
position = Vector2(-120, -88)
interactable_name = 9
oneshot_interaction = true

[node name="Chest" parent="Interactables" instance=ExtResource("15_dss4m")]
position = Vector2(-104, -40)
interactable_name = 12
oneshot_interaction = true
interactable_card_reward = SubResource("Resource_dss4m")

[node name="Player" parent="." instance=ExtResource("5_71j4m")]
position = Vector2(-56, -8)

[node name="MonsterContainer" parent="." instance=ExtResource("3_k0juu")]
position = Vector2(-24, 15)
scale = Vector2(1, 1)

[node name="MonsterSprite" parent="MonsterContainer" instance=ExtResource("4_71j4m")]
position = Vector2(112, -55)

[node name="CardGui" parent="." instance=ExtResource("5_qfnet")]
deck = Array[ExtResource("16_dss4m")]([SubResource("Resource_xo05s"), SubResource("Resource_pm21f")])

[node name="BackgroundMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_7r4gi")
script = ExtResource("9_w7kh3")

[node name="PanelContainer" type="PanelContainer" parent="."]
visible = false
offset_left = -144.0
offset_top = -72.0
offset_right = 32.0
offset_bottom = 48.0
theme_override_styles/panel = SubResource("StyleBoxFlat_xo05s")
script = ExtResource("10_q5onr")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("11_jhx03")
theme_override_font_sizes/font_size = 16
icon = ExtResource("12_o8fc1")

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxTexture_7t5mc")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("12_o8fc1")

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("11_jhx03")
theme_override_font_sizes/font_size = 32
text = "4"
horizontal_alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(101, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/line_separation = -3
theme_override_fonts/normal_font = ExtResource("11_jhx03")
theme_override_font_sizes/normal_font_size = 16
text = "Move with 'W', 'A', 'S, & 'D'

Open the drawer with 'TAB' or click the tab in the bottom right of the screen.

Click the key card in the bottom drawer to show interactable objects.

Movement is disabled when cards are selected.

Monsters move after you move (they do nothing for now.)"

[connection signal="child_entered_tree" from="Interactables" to="Interactables" method="_on_child_entered_tree"]
[connection signal="action_attempted_on" from="Player" to="Interactables" method="_on_player_action_attempted_on"]
[connection signal="player_just_moved" from="Player" to="MonsterContainer" method="handle_monster_movement"]
[connection signal="monsters_finished_moving" from="MonsterContainer" to="Player" method="unlock_movement"]
[connection signal="card_action_primed" from="CardGui" to="Interactables" method="handle_card_selection"]
[connection signal="card_action_unprimed" from="CardGui" to="Interactables" method="handle_card_deselection"]
[connection signal="finished" from="BackgroundMusic" to="BackgroundMusic" method="loop_audio"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Button" to="PanelContainer" method="_on_button_pressed"]
